# Wokfisch

./: README.md  frontend.py  main.py
backend/: Board.cpp  Board.hpp  Board_qNNUE.cpp  Board_qNNUE.hpp  CMakeLists.txt  MoveMap.hpp  TestSuite.cpp  Timer.cpp  Timer.hpp  Wokfisch.cpp  Wokfisch.hpp  constants.hpp
frontend/: utils.py
